seaqt/QtCore/gen_qcoreapplication.nim


proc fcQCoreApplication_new(argc: ptr cint, argv: cstringArray): ptr cQCoreApplication {.importc: "QCoreApplication_new".}
proc fcQCoreApplication_new2(argc: ptr cint, argv: cstringArray, param3: cint): ptr cQCoreApplication {.importc: "QCoreApplication_new2".}
proc fcQCoreApplication_metaObject(self: pointer, ): pointer {.importc: "QCoreApplication_metaObject".}
proc fcQCoreApplication_metacast(self: pointer, param1: cstring): pointer {.importc: "QCoreApplication_metacast".}
proc fcQCoreApplication_tr(s: cstring): struct_miqt_string {.importc: "QCoreApplication_tr".}
proc fcQCoreApplication_trUtf8(s: cstring): struct_miqt_string {.importc: "QCoreApplication_trUtf8".}
proc fcQCoreApplication_arguments(): struct_miqt_array {.importc: "QCoreApplication_arguments".}
proc fcQCoreApplication_setAttribute(attribute: cint): void {.importc: "QCoreApplication_setAttribute".}
proc fcQCoreApplication_testAttribute(attribute: cint): bool {.importc: "QCoreApplication_testAttribute".}
proc fcQCoreApplication_setOrganizationDomain(orgDomain: struct_miqt_string): void {.importc: "QCoreApplication_setOrganizationDomain".}
proc fcQCoreApplication_organizationDomain(): struct_miqt_string {.importc: "QCoreApplication_organizationDomain".}
proc fcQCoreApplication_setOrganizationName(orgName: struct_miqt_string): void {.importc: "QCoreApplication_setOrganizationName".}
proc fcQCoreApplication_organizationName(): struct_miqt_string {.importc: "QCoreApplication_organizationName".}
proc fcQCoreApplication_setApplicationName(application: struct_miqt_string): void {.importc: "QCoreApplication_setApplicationName".}
proc fcQCoreApplication_applicationName(): struct_miqt_string {.importc: "QCoreApplication_applicationName".}
proc fcQCoreApplication_setApplicationVersion(version: struct_miqt_string): void {.importc: "QCoreApplication_setApplicationVersion".}
proc fcQCoreApplication_applicationVersion(): struct_miqt_string {.importc: "QCoreApplication_applicationVersion".}
proc fcQCoreApplication_setSetuidAllowed(allow: bool): void {.importc: "QCoreApplication_setSetuidAllowed".}
proc fcQCoreApplication_isSetuidAllowed(): bool {.importc: "QCoreApplication_isSetuidAllowed".}
proc fcQCoreApplication_instance(): pointer {.importc: "QCoreApplication_instance".}
proc fcQCoreApplication_exec(): cint {.importc: "QCoreApplication_exec".}
proc fcQCoreApplication_processEvents(): void {.importc: "QCoreApplication_processEvents".}
proc fcQCoreApplication_processEvents2(flags: cint, maxtime: cint): void {.importc: "QCoreApplication_processEvents2".}
proc fcQCoreApplication_exit(): void {.importc: "QCoreApplication_exit".}
proc fcQCoreApplication_sendEvent(receiver: pointer, event: pointer): bool {.importc: "QCoreApplication_sendEvent".}
proc fcQCoreApplication_postEvent(receiver: pointer, event: pointer): void {.importc: "QCoreApplication_postEvent".}
proc fcQCoreApplication_sendPostedEvents(): void {.importc: "QCoreApplication_sendPostedEvents".}
proc fcQCoreApplication_removePostedEvents(receiver: pointer): void {.importc: "QCoreApplication_removePostedEvents".}
proc fcQCoreApplication_hasPendingEvents(): bool {.importc: "QCoreApplication_hasPendingEvents".}
proc fcQCoreApplication_eventDispatcher(): pointer {.importc: "QCoreApplication_eventDispatcher".}
proc fcQCoreApplication_setEventDispatcher(eventDispatcher: pointer): void {.importc: "QCoreApplication_setEventDispatcher".}
proc fcQCoreApplication_notify(self: pointer, param1: pointer, param2: pointer): bool {.importc: "QCoreApplication_notify".}
proc fcQCoreApplication_startingUp(): bool {.importc: "QCoreApplication_startingUp".}
proc fcQCoreApplication_closingDown(): bool {.importc: "QCoreApplication_closingDown".}
proc fcQCoreApplication_applicationDirPath(): struct_miqt_string {.importc: "QCoreApplication_applicationDirPath".}
proc fcQCoreApplication_applicationFilePath(): struct_miqt_string {.importc: "QCoreApplication_applicationFilePath".}
proc fcQCoreApplication_applicationPid(): clonglong {.importc: "QCoreApplication_applicationPid".}
proc fcQCoreApplication_setLibraryPaths(libraryPaths: struct_miqt_array): void {.importc: "QCoreApplication_setLibraryPaths".}
proc fcQCoreApplication_libraryPaths(): struct_miqt_array {.importc: "QCoreApplication_libraryPaths".}
proc fcQCoreApplication_addLibraryPath(param1: struct_miqt_string): void {.importc: "QCoreApplication_addLibraryPath".}
proc fcQCoreApplication_removeLibraryPath(param1: struct_miqt_string): void {.importc: "QCoreApplication_removeLibraryPath".}
proc fcQCoreApplication_installTranslator(messageFile: pointer): bool {.importc: "QCoreApplication_installTranslator".}
proc fcQCoreApplication_removeTranslator(messageFile: pointer): bool {.importc: "QCoreApplication_removeTranslator".}
proc fcQCoreApplication_translate(context: cstring, key: cstring): struct_miqt_string {.importc: "QCoreApplication_translate".}
proc fcQCoreApplication_flush(): void {.importc: "QCoreApplication_flush".}
proc fcQCoreApplication_installNativeEventFilter(self: pointer, filterObj: pointer): void {.importc: "QCoreApplication_installNativeEventFilter".}
proc fcQCoreApplication_removeNativeEventFilter(self: pointer, filterObj: pointer): void {.importc: "QCoreApplication_removeNativeEventFilter".}
proc fcQCoreApplication_isQuitLockEnabled(): bool {.importc: "QCoreApplication_isQuitLockEnabled".}
proc fcQCoreApplication_setQuitLockEnabled(enabled: bool): void {.importc: "QCoreApplication_setQuitLockEnabled".}
proc fcQCoreApplication_quit(): void {.importc: "QCoreApplication_quit".}
proc fcQCoreApplication_organizationNameChanged(self: pointer, ): void {.importc: "QCoreApplication_organizationNameChanged".}
proc fcQCoreApplication_connect_organizationNameChanged(self: pointer, slot: int) {.importc: "QCoreApplication_connect_organizationNameChanged".}
proc fcQCoreApplication_organizationDomainChanged(self: pointer, ): void {.importc: "QCoreApplication_organizationDomainChanged".}
proc fcQCoreApplication_connect_organizationDomainChanged(self: pointer, slot: int) {.importc: "QCoreApplication_connect_organizationDomainChanged".}
proc fcQCoreApplication_applicationNameChanged(self: pointer, ): void {.importc: "QCoreApplication_applicationNameChanged".}
proc fcQCoreApplication_connect_applicationNameChanged(self: pointer, slot: int) {.importc: "QCoreApplication_connect_applicationNameChanged".}
proc fcQCoreApplication_applicationVersionChanged(self: pointer, ): void {.importc: "QCoreApplication_applicationVersionChanged".}
proc fcQCoreApplication_connect_applicationVersionChanged(self: pointer, slot: int) {.importc: "QCoreApplication_connect_applicationVersionChanged".}
proc fcQCoreApplication_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QCoreApplication_tr2".}
proc fcQCoreApplication_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QCoreApplication_tr3".}
proc fcQCoreApplication_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QCoreApplication_trUtf82".}
proc fcQCoreApplication_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QCoreApplication_trUtf83".}
proc fcQCoreApplication_setAttribute2(attribute: cint, on: bool): void {.importc: "QCoreApplication_setAttribute2".}
proc fcQCoreApplication_processEvents1(flags: cint): void {.importc: "QCoreApplication_processEvents1".}
proc fcQCoreApplication_exit1(retcode: cint): void {.importc: "QCoreApplication_exit1".}
proc fcQCoreApplication_postEvent3(receiver: pointer, event: pointer, priority: cint): void {.importc: "QCoreApplication_postEvent3".}
proc fcQCoreApplication_sendPostedEvents1(receiver: pointer): void {.importc: "QCoreApplication_sendPostedEvents1".}
proc fcQCoreApplication_sendPostedEvents2(receiver: pointer, event_type: cint): void {.importc: "QCoreApplication_sendPostedEvents2".}
proc fcQCoreApplication_removePostedEvents2(receiver: pointer, eventType: cint): void {.importc: "QCoreApplication_removePostedEvents2".}
proc fcQCoreApplication_translate3(context: cstring, key: cstring, disambiguation: cstring): struct_miqt_string {.importc: "QCoreApplication_translate3".}
proc fcQCoreApplication_translate4(context: cstring, key: cstring, disambiguation: cstring, n: cint): struct_miqt_string {.importc: "QCoreApplication_translate4".}
proc fQCoreApplication_virtualbase_notify(self: pointer, param1: pointer, param2: pointer): bool{.importc: "QCoreApplication_virtualbase_notify".}
proc fcQCoreApplication_override_virtual_notify(self: pointer, slot: int) {.importc: "QCoreApplication_override_virtual_notify".}
proc fQCoreApplication_virtualbase_event(self: pointer, param1: pointer): bool{.importc: "QCoreApplication_virtualbase_event".}
proc fcQCoreApplication_override_virtual_event(self: pointer, slot: int) {.importc: "QCoreApplication_override_virtual_event".}
proc fQCoreApplication_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QCoreApplication_virtualbase_eventFilter".}
proc fcQCoreApplication_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QCoreApplication_override_virtual_eventFilter".}
proc fQCoreApplication_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QCoreApplication_virtualbase_timerEvent".}
proc fcQCoreApplication_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QCoreApplication_override_virtual_timerEvent".}
proc fQCoreApplication_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QCoreApplication_virtualbase_childEvent".}
proc fcQCoreApplication_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QCoreApplication_override_virtual_childEvent".}
proc fQCoreApplication_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QCoreApplication_virtualbase_customEvent".}
proc fcQCoreApplication_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QCoreApplication_override_virtual_customEvent".}
proc fQCoreApplication_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QCoreApplication_virtualbase_connectNotify".}
proc fcQCoreApplication_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QCoreApplication_override_virtual_connectNotify".}
proc fQCoreApplication_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QCoreApplication_virtualbase_disconnectNotify".}
proc fcQCoreApplication_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QCoreApplication_override_virtual_disconnectNotify".}
proc fcQCoreApplication_delete(self: pointer) {.importc: "QCoreApplication_delete".}


func init*(T: type gen_qcoreapplication_types.QCoreApplication, h: ptr cQCoreApplication): gen_qcoreapplication_types.QCoreApplication =
  T(h: h)
proc create*(T: type gen_qcoreapplication_types.QCoreApplication, ): gen_qcoreapplication_types.QCoreApplication =
  # Convert []string to long-lived int& argc, char** argv, never call free()
  var args2 = @[getAppFilename()]
  args2.add commandLineParams()
  var argv: cStringArray = allocCstringArray(args2)
  var argc {.threadvar.}: cint
  argc = args2.len.cint
  gen_qcoreapplication_types.QCoreApplication.init(fcQCoreApplication_new(addr argc, argv))

proc create*(T: type gen_qcoreapplication_types.QCoreApplication, param3: cint): gen_qcoreapplication_types.QCoreApplication =
  # Convert []string to long-lived int& argc, char** argv, never call free()
  var args2 = @[getAppFilename()]
  args2.add commandLineParams()
  var argv: cStringArray = allocCstringArray(args2)
  var argc {.threadvar.}: cint
  argc = args2.len.cint
  gen_qcoreapplication_types.QCoreApplication.init(fcQCoreApplication_new2(addr argc, argv, param3))

proc metaObject*(self: gen_qcoreapplication_types.QCoreApplication, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQCoreApplication_metaObject(self.h))
